# content_management_systems_test_bench

./: Pipfile  README.md
django_wagtail_spike/: Dockerfile  README.md  manage.py  pyproject.toml
django_wagtail_spike/django_wagtail_spike/: wsgi.py
django_wagtail_spike/django_wagtail_spike/settings/: base.py  dev.py
django_wagtail_spike/django_wagtail_spike/templates/: base.html
