[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Zach Bentzinger", email = "bentzingerz@gmail.com"},
]
dependencies = ["Django<4.1,>=4.0", "wagtail<3.1,>=3.0"]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
